[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "linendistinctsyntax"
version = "0.1.0"
[tool.poetry.dependencies]
"discord.py" = "^1.3"
python = "^3.7"
Flask = "^1.1"
jsonbox = "^1.2"
Pillow = "^7.1"
gspread = "^3.6"
[tool.poetry.dev-dependencies]
