[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "linendistinctsyntax"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^1.1"
Pillow = "^7.1"
gspread = "^3.6"
jsonbox = "^1.2"
python = "^3.8"
regex = "^2020.6.8"
discord-logger = "^1.1.2"
discord = "^1.0.1"
[tool.poetry.dev-dependencies]
